syntax = "proto3";

package pollen.state.v1;

import "buf/validate/validate.proto";
import "pollen/state/v1/state.proto";

option go_package = "github.com/sambigeara/pollen/api/genpb/pollen/state/v1;statev1";

message Timestamp {
  int64 counter = 1;
  string node_id = 2 [(buf.validate.field).string = {min_len: 1}];
}

message NodeRecord {
  Node value = 1;
  Timestamp ts = 2;
  bool tombstone = 3; // If true, this Node is deleted/offline.
}

// message JobRecord {
//   Job value = 1;
//   Timestamp ts = 2;
//   bool tombstone = 3;
// }

// DeltaState is what nodes exchange during anti-entropy sync.
// It can represent a full state or just the difference.
message DeltaState {
  // Map of NodeID -> Record
  map<string, NodeRecord> nodes = 1;
}

// message Job {
//   string id = 1 [(buf.validate.field).string = {uuid: true}];
//   string name = 2;

//   // The SHA256 hash of the binary. Nodes fetch the actual bytes via RPC.
//   string binary_hash = 3 [(buf.validate.field).string = {len: 64}];

//   // Environment variables (KEY=VALUE)
//   map<string, string> env = 4;

//   // Arguments passed to the WASM entrypoint
//   repeated string args = 5;

//   // Constraints
//   int32 replica_count = 6; // 0 = DaemonSet (all nodes), >0 = Specific count
// }
